--- a/.github/workflows/deploy-indexer.yaml
+++ b/.github/workflows/deploy-indexer.yaml
@@ -60,7 +60,7 @@ jobs:
               - 'apps/indexer/**/*.ts'
               - '!apps/indexer/src/api/**'
       - name: Deploy ${{ matrix.dao }}-indexer
-        if: steps.changes.outputs.indexer == 'true'
+        if: ${{ steps.changes.outputs.indexer == 'true' }}
         run: railway up -s ${{ matrix.dao }}-indexer -e ${{ steps.env.outputs.environment }} --ci -d
       - name: Deploy ${{ matrix.dao }}-api
         run: railway up -s ${{ matrix.dao }}-api -e ${{ steps.env.outputs.environment }} --ci
