--- a/.github/workflows/deploy-indexer.yaml
+++ b/.github/workflows/deploy-indexer.yaml
@@ -2,11 +2,11 @@ name: Deploy Indexers and API Gateway to Railway
 
 on:
   push:
-    branches: [dev, main]
-    paths:
-      - "apps/indexer/**/*.ts"
-      - "apps/api-gateway/**/*.ts"
-      - "infra/**"
+    branches: [dev, main, chore/test-ci]
+    # paths:
+    #   - "apps/indexer/**/*.ts"
+    #   - "apps/api-gateway/**/*.ts"
+    #   - "infra/**"
 
 jobs:
   get-daos:
@@ -61,26 +61,27 @@ jobs:
               - '!apps/indexer/src/api/**'
       - name: Deploy ${{ matrix.dao }}-indexer
         if: ${{ steps.changes.outputs.indexer == 'true' }}
-        run: railway up -s ${{ matrix.dao }}-indexer -e ${{ steps.env.outputs.environment }} --ci -d
-      - name: Deploy ${{ matrix.dao }}-api
-        run: railway up -s ${{ matrix.dao }}-api -e ${{ steps.env.outputs.environment }} --ci
+        # run: railway up -s ${{ matrix.dao }}-indexer -e ${{ steps.env.outputs.environment }} --ci -d
+        run: echo ${{ steps.changes.outputs.indexer }}
+      # - name: Deploy ${{ matrix.dao }}-api
+      #   run: railway up -s ${{ matrix.dao }}-api -e ${{ steps.env.outputs.environment }} --ci
 
-  deploy-api-gateway:
-    needs: deploy-indexers
-    runs-on: ubuntu-latest
-    container: ghcr.io/railwayapp/cli:latest
-    environment: ${{ github.ref == 'refs/heads/main' && 'production' || 'dev' }}
-    env:
-      RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
-    steps:
-      - uses: actions/checkout@v3
-      - name: Determine environment
-        id: env
-        run: |
-          if [[ "${{ github.ref }}" == "refs/heads/main" || "${{ github.base_ref }}" == "main" ]]; then
-            echo "environment=production" >> $GITHUB_OUTPUT
-          else
-            echo "environment=dev" >> $GITHUB_OUTPUT
-          fi
-      - name: Deploy api-gateway
-        run: railway up -s api-gateway -e ${{ steps.env.outputs.environment }} --ci
+  # deploy-api-gateway:
+  #   needs: deploy-indexers
+  #   runs-on: ubuntu-latest
+  #   container: ghcr.io/railwayapp/cli:latest
+  #   environment: ${{ github.ref == 'refs/heads/main' && 'production' || 'dev' }}
+  #   env:
+  #     RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - name: Determine environment
+  #       id: env
+  #       run: |
+  #         if [[ "${{ github.ref }}" == "refs/heads/main" || "${{ github.base_ref }}" == "main" ]]; then
+  #           echo "environment=production" >> $GITHUB_OUTPUT
+  #         else
+  #           echo "environment=dev" >> $GITHUB_OUTPUT
+  #         fi
+  #     - name: Deploy api-gateway
+  #       run: railway up -s api-gateway -e ${{ steps.env.outputs.environment }} --ci
