chore: prune inactive db schema on ci

--- a/apps/indexer/package.json
+++ b/apps/indexer/package.json
@@ -6,6 +6,8 @@
     "dev": "ponder dev --schema public",
     "start": "ponder start --views-schema=anticapture --schema=$RAILWAY_DEPLOYMENT_ID",
     "serve": "ponder serve --schema=anticapture",
+    "db:list": "ponder db list",
+    "db:prune": "ponder db prune",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
     "typecheck": "tsc",
