feat: run codegen on pr and synchronize

--- a/.github/workflows/client-codegen.yaml
+++ b/.github/workflows/client-codegen.yaml
@@ -1,8 +1,8 @@
 name: GraphQL Client Codegen
 
 on:
-  push:
-    branches: ["**"]
+  pull_request:
+    types: [opened, synchronize, reopened]
 
 jobs:
   codegen:
