--- a/apps/indexer/package.json
+++ b/apps/indexer/package.json
@@ -2,6 +2,17 @@
   "name": "@anticapture/indexer",
   "version": "0.3.1",
   "private": true,
+  "type": "module",
+  "exports": {
+    "./*": {
+      "types": "./src/indexer/*/abi/index.ts",
+      "import": "./src/indexer/*/abi/index.ts"
+    },
+    "./contracts": {
+      "types": "./src/lib/constants.ts",
+      "import": "./src/lib/constants.ts"
+    }
+  },
   "scripts": {
     "dev": "ponder dev --disable-ui",
     "start": "ponder start --views-schema=anticapture --schema=$RAILWAY_DEPLOYMENT_ID",
