--- a/apps/api-gateway/package.json
+++ b/apps/api-gateway/package.json
@@ -7,7 +7,8 @@
     "dev": "tsx watch src/index.ts",
     "start": "node dist/src/index.js",
     "build": "tsc",
-    "clean": "rm -rf node_modules dist schema.graphql *.tsbuildinfo"
+    "clean": "rm -rf node_modules dist schema.graphql *.tsbuildinfo",
+    "typecheck": "tsc --noEmit"
   },
   "keywords": [],
   "author": "",
