--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -36,6 +36,7 @@
     "ethers": "^6.13.5",
     "graphql": "^16.11.0",
     "lucide-react": "^0.511.0",
+    "markdown-to-jsx": "^7.7.13",
     "next": "15.3.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
