--- a/.github/workflows/deploy-indexer.yaml
+++ b/.github/workflows/deploy-indexer.yaml
@@ -24,8 +24,12 @@ jobs:
             api:
               - 'apps/indexer/src/api/**'
             indexer:
-              - 'apps/indexer/**/*.ts'
-              - '!apps/indexer/src/api/**'
+              - 'apps/indexer/src/eventHandlers/**'
+              - 'apps/indexer/src/indexer/**'
+              - 'apps/indexer/src/interfaces/**'
+              - 'apps/indexer/src/lib/**'
+              - 'apps/indexer/src/*.ts'
+              - 'apps/indexer/*.ts'
 
   get-daos:
     runs-on: ubuntu-latest
