--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -52,14 +52,9 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^3.2.6",
-    "@storybook/addon-essentials": "^8.6.14",
-    "@storybook/addon-interactions": "^8.6.14",
-    "@storybook/addon-onboarding": "^8.6.14",
-    "@storybook/blocks": "^8.6.14",
-    "@storybook/experimental-addon-test": "^8.6.14",
-    "@storybook/nextjs": "^8.6.14",
-    "@storybook/react": "^8.6.14",
+    "@chromatic-com/storybook": "^4.1.1",
+    "@storybook/addon-onboarding": "^9.1.10",
+    "@storybook/nextjs": "^9.1.10",
     "@tailwindcss/postcss": "^4.1.7",
     "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.16",
@@ -69,17 +64,18 @@
     "@types/react-dom": "19.1.5",
     "eslint": "^8",
     "eslint-config-next": "15.3.2",
-    "eslint-plugin-storybook": "^0.12.0",
+    "eslint-plugin-storybook": "^9.1.10",
     "jest": "^29.7.0",
     "playwright": "^1.52.0",
     "postcss": "^8",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "storybook": "^8.6.14",
+    "storybook": "^9.1.10",
     "tailwindcss": "^4.1.7",
     "ts-jest": "^29.2.6",
     "tw-animate-css": "^1.3.0",
     "typescript": "^5",
-    "vitest": "^3.2.1"
+    "vitest": "^3.2.1",
+    "@storybook/addon-vitest": "9.1.10"
   }
 }
