--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -42,6 +42,7 @@
     "react": "19.1.0",
     "react-csv": "^2.2.2",
     "react-dom": "19.1.0",
+    "react-hot-toast": "^2.6.0",
     "react-intersection-observer": "^9.16",
     "react-jazzicon": "^1.0.4",
     "recharts": "^2.15.0",
