--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,3 +1,3 @@
-* @heronlancellot @lgahdl @edulennert @pikonha @LeonardoVieira1630 @alextnetto
+* @edulennert @pikonha @LeonardoVieira1630 @alextnetto @brunod-e @PedroBinotto
 
 apps/dashboard/* @isadorable-png
