--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -40,6 +40,7 @@
     "markdown-to-jsx": "^7.7.13",
     "next": "15.3.2",
     "react": "19.1.0",
+    "react-blockies": "^1.4.1",
     "react-csv": "^2.2.2",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
@@ -64,6 +65,7 @@
     "@types/lodash": "^4.17.16",
     "@types/node": "^20",
     "@types/react": "19.1.4",
+    "@types/react-blockies": "^1.4.4",
     "@types/react-csv": "^1.1.10",
     "@types/react-dom": "19.1.5",
     "eslint": "^8",
